add /stats endpoint
